--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#spring.datasource.url= ${Dserver.port=$PORT $JAVA_OPTS -jar target/provan1-0.0.1-SNAPSHOT.jar 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_dados?useSSL=false
 spring.datasource.username=root
@@ -7,3 +8,4 @@ spring.datasource.password=Sport@2202
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.open-in-view=false
+
