variavel de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_dados?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Sport@2202
+
+spring.datasource.hibernate.url="jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/b5364f73e03359"
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
