--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bd_dados?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Sport@2202
 
-spring.datasource.hibernate.url="jdbc:mysql://mysql://b5364f73e03359:7df6cfa2@us-cdbr-east-06.cleardb.net/heroku_b352466dfb92954?reconnect=true"
+spring.datasource.hibernate.url="jdbc:mysql://b5364f73e03359:7df6cfa2@us-cdbr-east-06.cleardb.net/heroku_b352466dfb92954?reconnect=true"
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
