--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # data source
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver // ou fully qualified name de outra classe que define seu driver jdbc usado em produção
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver 
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_HOST_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
