--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,3 @@
-# data source
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver 
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_HOST_PORT}/${DB_NAME}?createDatabaseIfNotExist=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=mysql://b5364f73e03359:7df6cfa2@us-cdbr-east-06.cleardb.net/heroku_b352466dfb92954?reconnect=true
+spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.show-sql=false spring.jpa.properties.hibernate.format_sql=false
